--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -23,9 +23,8 @@
 }
 
 .balance {
-  padding: 1rem;
+  padding-bottom: 2rem;
   border-radius: 6px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
 }
 
 .label {
@@ -41,9 +40,7 @@
 }
 
 .transfer-form {
-  padding: 2rem;
-  border-radius: 8px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  width: 100%;
 }
 
 .form-group {
@@ -59,7 +56,7 @@
 }
 
 .input-field {
-  width: 100%;
+  width: 90%;
   padding: 0.75rem;
   border: 1px solid #e2e8f0;
   border-radius: 4px;
@@ -81,10 +78,6 @@ button {
   font-weight: 600;
   cursor: pointer;
   transition: all 0.2s;
-}
-
-.send-button {
-  margin-left: 11px;
 }
 
 .connect-button,
@@ -110,4 +103,19 @@ button {
   margin-bottom: 1rem;
   border-radius: 4px;
   border: 1px solid #fc8181;
+}
+
+.select-field {
+  width: 97%;
+  padding: 0.75rem;
+  padding-right: 2rem;
+  border: 1px solid #e2e8f0;
+  border-radius: 4px;
+  font-size: 1rem;
+  cursor: pointer;
+  appearance: none;
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20' fill='white'%3E%3Cpath fill-rule='evenodd' d='M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z' clip-rule='evenodd'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 0.75rem center;
+  background-size: 1rem;
 }
