--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -80,6 +80,11 @@ button {
   transition: all 0.2s;
 }
 
+.view-transaction-button {
+  margin-top: 2.5rem;
+}
+
+.view-transaction-button,
 .connect-button,
 .send-button {
   background: #666cff;
