--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -123,16 +123,22 @@ button {
 
 .main-container {
   display: flex;
-  gap: 3rem;
 }
 
 .tabs {
   width: 250px;
+  height: 550px;
   background-color: #1e1e1e;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 20px;
+}
+
+.content {
+  height: 550px;
+  padding: 20px;
+  background-color: #1e1e1e;
 }
 
 .tab-button {
