feat: setting up the counter contract and it's ui

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -86,6 +86,7 @@ button {
   margin-top: 2.5rem;
 }
 
+.invoke-button,
 .metamask-button,
 .view-transaction-button,
 .connect-button,
@@ -94,6 +95,7 @@ button {
   color: #f7f7f7;
 }
 
+.invoke-button:hover,
 .view-transaction-button:hover,
 .metamask-button:hover,
 .connect-button:hover,
@@ -247,4 +249,9 @@ button {
   width: 20px;
   height: 20px;
   filter: invert(1);
+}
+
+.counter {
+  text-align: center;
+  font-size: 1.5rem;
 }
