--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -37,46 +37,24 @@ h1 {
 }
 
 button {
+  width: 100%;
   border-radius: 8px;
   border: 4px solid transparent;
-  padding: 12px 16px;
+  padding: 0.75rem;
   margin: 8px 2px;
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #0070f3;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: all 0.2s;
 }
+
 button:hover {
-  background: #171717;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  background: #0058c0;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #04aa6d; /* Green */
-    color: #fff;
-  }
-  button:hover {
-    background: #039962;
-  }
-}
-
-.card {
-  padding: 100px;
-  border: 1px solid #039962;
-  display: flex;
-  gap: 20px;
-  flex-direction: column;
+button:disabled {
+  background-color: #555;
+  cursor: not-allowed;
 }
