--- a/ui/src/components/GMPForm.css
+++ b/ui/src/components/GMPForm.css
@@ -21,7 +21,8 @@
 
 .form-group-evm-address {
   display: flex;
-  gap: 8px;
+  align-items: center;
+  gap: 10px;
 }
 
 .metamask-logo {
@@ -42,10 +43,13 @@
 }
 
 .input-field {
-  width: 90%;
+  flex: 1;
+  width: calc(100% - 0.75rem);
+  background-color: #2b2b2b;
+  color: #f1f1f1;
   padding: 0.75rem;
-  border: 1px solid #e2e8f0;
-  border-radius: 4px;
+  border: 1px solid #333;
+  border-radius: 6px;
   font-size: 1rem;
 }
 
@@ -55,4 +59,8 @@
   color: #a6acba;
   tab-size: 4;
   font-size: 0.875rem;
+}
+
+.submit-button {
+  width: calc(100% + 0.75rem);
 }
